<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
     >

    <Button
        android:id="@+id/shahihbukhari"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".15"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/iconsunnah"
        android:drawablePadding="10dp"
        android:text="@string/shahihbukhari" />

    <Button
        android:id="@+id/shahihmuslim"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".15"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/iconsunnah"
        android:drawablePadding="10dp"
        android:text="@string/shahihmuslim" />
    
        <Button
        android:id="@+id/sunannasai"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".15"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/iconsunnah"
        android:drawablePadding="10dp"
        android:text="@string/sunannasai" />
        
        <Button
        android:id="@+id/sunanabudawud"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".15"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/iconsunnah"
        android:drawablePadding="10dp"
        android:text="@string/sunanabudawud" />
        
        <Button
        android:id="@+id/riyadhusshalihin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".15"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/iconsunnah"
        android:drawablePadding="10dp"
        android:text="@string/riyadhusshalihin" />
        
        <Button
        android:id="@+id/arbainnawawiyah"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".15"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/iconsunnah"
        android:drawablePadding="10dp"
        android:text="@string/arbainnawawiyah" />

</LinearLayout>
